1.16.0 fails to build with -Dconcheck=false (i.e. without curl)
1.16.0 fails to build with -Dconcheck=false because it doesn't include anything curl-ish:
FAILED: src/25a6634@@NetworkManager@sta/nm-connectivity.c.o
x86_64-pc-linux-gnu-cc -Isrc/25a6634@@NetworkManager@sta -Isrc -I../NetworkManager-1.16.0/src -Ilibnm-core -I../NetworkManager-1.16.0/libnm-core -I. -I../NetworkManager-1.16.0/ -Ishared -I../NetworkManager-1.16.0/shared -I../NetworkManager-1.16.0/shared/systemd/sd-adapt-shared -I../NetworkManager-1.16.0/shared/systemd/src/basic -I/usr/x86_64-pc-linux-gnu/include/gio-unix-2.0 -I/usr/x86_64-pc-linux-gnu/include/libmount -I/usr/x86_64-pc-linux-gnu/include/blkid -I/usr/x86_64-pc-linux-gnu/include/uuid -I/usr/x86_64-pc-linux-gnu/lib/libffi-3.2.1/include -I/usr/x86_64-pc-linux-gnu/include/glib-2.0 -I/usr/x86_64-pc-linux-gnu/lib/glib-2.0/include -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -std=gnu11 -O2 -g -fdata-sections -ffunction-sections -Wdeclaration-after-statement -Wfloat-equal -Wimplicit-fallthrough -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wmissing-prototypes -Wno-duplicate-decl-specifier -Wno-format-truncation -Wno-missing-field-initializers -Wno-pragmas -Wno-sign-compare -Wno-unused-parameter -Wpointer-arith -Wshadow -Wstrict-prototypes -Wundef -fno-strict-aliasing -march=native -O2 -march=native -O2 -fPIC -pthread -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_40 -DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_40 -DNETWORKMANAGER_COMPILATION=NM_NETWORKMANAGER_COMPILATION_DAEMON -MD -MQ 'src/25a6634@@NetworkManager@sta/nm-connectivity.c.o' -MF 'src/25a6634@@NetworkManager@sta/nm-connectivity.c.o.d' -o 'src/25a6634@@NetworkManager@sta/nm-connectivity.c.o' -c ../NetworkManager-1.16.0/src/nm-connectivity.c
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:[m[K In function '[01m[Kdo_curl_request[m[K':
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:679:2:[m[K [01;31m[Kerror: [m[Kunknown type name '[01m[KCURLM[m[K'
[01;31m[KCURLM[m[K *mhandle;
[01;31m[K^~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:680:2:[m[K [01;31m[Kerror: [m[Kunknown type name '[01m[KCURL[m[K'; did you mean '[01m[KNULL[m[K'?
[01;31m[KCURL[m[K *ehandle;
[01;31m[K^~~~[m[K
[32m[KNULL[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:683:12:[m[K [01;35m[Kwarning: [m[Kimplicit declaration of function '[01m[Kcurl_multi_init[m[K'; did you mean '[01m[Kc_list_init[m[K'? [[01;35m[K-Wimplicit-function-declaration[m[K]
mhandle = [01;35m[Kcurl_multi_init[m[K ();
[01;35m[K^~~~~~~~~~~~~~~[m[K
[32m[Kc_list_init[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:683:10:[m[K [01;35m[Kwarning: [m[Kassignment to '[01m[Kint *[m[K' from '[01m[Kint[m[K' makes pointer from integer without a cast [[01;35m[K-Wint-conversion[m[K]
mhandle [01;35m[K=[m[K curl_multi_init ();
[01;35m[K^[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:689:12:[m[K [01;35m[Kwarning: [m[Kimplicit declaration of function '[01m[Kcurl_easy_init[m[K'; did you mean '[01m[Kc_list_init[m[K'? [[01;35m[K-Wimplicit-function-declaration[m[K]
ehandle = [01;35m[Kcurl_easy_init[m[K ();
[01;35m[K^~~~~~~~~~~~~~[m[K
[32m[Kc_list_init[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:689:10:[m[K [01;35m[Kwarning: [m[Kassignment to '[01m[Kint *[m[K' from '[01m[Kint[m[K' makes pointer from integer without a cast [[01;35m[K-Wint-conversion[m[K]
ehandle [01;35m[K=[m[K curl_easy_init ();
[01;35m[K^[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:691:3:[m[K [01;35m[Kwarning: [m[Kimplicit declaration of function '[01m[Kcurl_multi_cleanup[m[K' [[01;35m[K-Wimplicit-function-declaration[m[K]
[01;35m[Kcurl_multi_cleanup[m[K (mhandle);
[01;35m[K^~~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:696:9:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
cb_data[01;31m[K->[m[Kconcheck.curl_mhandle = mhandle;
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:697:9:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
cb_data[01;31m[K->[m[Kconcheck.curl_ehandle = ehandle;
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:698:9:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
cb_data[01;31m[K->[m[Kconcheck.request_headers = curl_slist_append (NULL, "Connection: close");
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:698:38:[m[K [01;35m[Kwarning: [m[Kimplicit declaration of function '[01m[Kcurl_slist_append[m[K'; did you mean '[01m[Kg_slist_append[m[K'? [[01;35m[K-Wimplicit-function-declaration[m[K]
cb_data->concheck.request_headers = [01;35m[Kcurl_slist_append[m[K (NULL, "Connection: close");
[01;35m[K^~~~~~~~~~~~~~~~~[m[K
[32m[Kg_slist_append[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:699:51:[m[K [01;31m[Kerror: [m[K'[01m[K_timeout_cb[m[K' undeclared (first use in this function); did you mean '[01m[Kg_timeout_add[m[K'?
cb_data->timeout_id = g_timeout_add_seconds (20, [01;31m[K_timeout_cb[m[K, cb_data);
[01;31m[K^~~~~~~~~~~[m[K
[32m[Kg_timeout_add[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:699:51:[m[K [01;36m[Knote: [m[Keach undeclared identifier is reported only once for each function it appears in
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:701:2:[m[K [01;35m[Kwarning: [m[Kimplicit declaration of function '[01m[Kcurl_multi_setopt[m[K' [[01;35m[K-Wimplicit-function-declaration[m[K]
[01;35m[Kcurl_multi_setopt[m[K (mhandle, CURLMOPT_SOCKETFUNCTION, multi_socket_cb);
[01;35m[K^~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:701:30:[m[K [01;31m[Kerror: [m[K'[01m[KCURLMOPT_SOCKETFUNCTION[m[K' undeclared (first use in this function); did you mean '[01m[KG_TYPE_SOCKET_CONNECTION[m[K'?
curl_multi_setopt (mhandle, [01;31m[KCURLMOPT_SOCKETFUNCTION[m[K, multi_socket_cb);
[01;31m[K^~~~~~~~~~~~~~~~~~~~~~~[m[K
[32m[KG_TYPE_SOCKET_CONNECTION[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:701:55:[m[K [01;31m[Kerror: [m[K'[01m[Kmulti_socket_cb[m[K' undeclared (first use in this function)
curl_multi_setopt (mhandle, CURLMOPT_SOCKETFUNCTION, [01;31m[Kmulti_socket_cb[m[K);
[01;31m[K^~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:702:30:[m[K [01;31m[Kerror: [m[K'[01m[KCURLMOPT_SOCKETDATA[m[K' undeclared (first use in this function)
curl_multi_setopt (mhandle, [01;31m[KCURLMOPT_SOCKETDATA[m[K, cb_data);
[01;31m[K^~~~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:703:30:[m[K [01;31m[Kerror: [m[K'[01m[KCURLMOPT_TIMERFUNCTION[m[K' undeclared (first use in this function)
curl_multi_setopt (mhandle, [01;31m[KCURLMOPT_TIMERFUNCTION[m[K, multi_timer_cb);
[01;31m[K^~~~~~~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:703:54:[m[K [01;31m[Kerror: [m[K'[01m[Kmulti_timer_cb[m[K' undeclared (first use in this function); did you mean '[01m[Ksi_timerid[m[K'?
curl_multi_setopt (mhandle, CURLMOPT_TIMERFUNCTION, [01;31m[Kmulti_timer_cb[m[K);
[01;31m[K^~~~~~~~~~~~~~[m[K
[32m[Ksi_timerid[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:704:30:[m[K [01;31m[Kerror: [m[K'[01m[KCURLMOPT_TIMERDATA[m[K' undeclared (first use in this function)
curl_multi_setopt (mhandle, [01;31m[KCURLMOPT_TIMERDATA[m[K, cb_data);
[01;31m[K^~~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:705:30:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_VERBOSE[m[K' undeclared (first use in this function)
curl_multi_setopt (mhandle, [01;31m[KCURLOPT_VERBOSE[m[K, 1);
[01;31m[K^~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:709:13:[m[K [01;31m[Kerror: [m[K'[01m[KCURL_IPRESOLVE_V4[m[K' undeclared (first use in this function)
resolve = [01;31m[KCURL_IPRESOLVE_V4[m[K;
[01;31m[K^~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:712:13:[m[K [01;31m[Kerror: [m[K'[01m[KCURL_IPRESOLVE_V6[m[K' undeclared (first use in this function)
resolve = [01;31m[KCURL_IPRESOLVE_V6[m[K;
[01;31m[K^~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:715:13:[m[K [01;31m[Kerror: [m[K'[01m[KCURL_IPRESOLVE_WHATEVER[m[K' undeclared (first use in this function)
resolve = [01;31m[KCURL_IPRESOLVE_WHATEVER[m[K;
[01;31m[K^~~~~~~~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:722:2:[m[K [01;35m[Kwarning: [m[Kimplicit declaration of function '[01m[Kcurl_easy_setopt[m[K' [[01;35m[K-Wimplicit-function-declaration[m[K]
[01;35m[Kcurl_easy_setopt[m[K (ehandle, CURLOPT_URL, cb_data->concheck.con_config->uri);
[01;35m[K^~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:722:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_URL[m[K' undeclared (first use in this function)
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_URL[m[K, cb_data->concheck.con_config->uri);
[01;31m[K^~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:722:49:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
curl_easy_setopt (ehandle, CURLOPT_URL, cb_data[01;31m[K->[m[Kconcheck.con_config->uri);
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:723:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_WRITEFUNCTION[m[K' undeclared (first use in this function)
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_WRITEFUNCTION[m[K, easy_write_cb);
[01;31m[K^~~~~~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:723:52:[m[K [01;31m[Kerror: [m[K'[01m[Keasy_write_cb[m[K' undeclared (first use in this function)
curl_easy_setopt (ehandle, CURLOPT_WRITEFUNCTION, [01;31m[Keasy_write_cb[m[K);
[01;31m[K^~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:724:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_WRITEDATA[m[K' undeclared (first use in this function)
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_WRITEDATA[m[K, cb_data);
[01;31m[K^~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:725:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_HEADERFUNCTION[m[K' undeclared (first use in this function)
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_HEADERFUNCTION[m[K, easy_header_cb);
[01;31m[K^~~~~~~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:725:53:[m[K [01;31m[Kerror: [m[K'[01m[Keasy_header_cb[m[K' undeclared (first use in this function)
curl_easy_setopt (ehandle, CURLOPT_HEADERFUNCTION, [01;31m[Keasy_header_cb[m[K);
[01;31m[K^~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:726:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_HEADERDATA[m[K' undeclared (first use in this function)
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_HEADERDATA[m[K, cb_data);
[01;31m[K^~~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:727:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_PRIVATE[m[K' undeclared (first use in this function); did you mean '[01m[KG_PARAM_PRIVATE[m[K'?
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_PRIVATE[m[K, cb_data);
[01;31m[K^~~~~~~~~~~~~~~[m[K
[32m[KG_PARAM_PRIVATE[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:728:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_HTTPHEADER[m[K' undeclared (first use in this function)
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_HTTPHEADER[m[K, cb_data->concheck.request_headers);
[01;31m[K^~~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:728:56:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
curl_easy_setopt (ehandle, CURLOPT_HTTPHEADER, cb_data[01;31m[K->[m[Kconcheck.request_headers);
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:729:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_INTERFACE[m[K' undeclared (first use in this function); did you mean '[01m[KG_TYPE_INTERFACE[m[K'?
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_INTERFACE[m[K, cb_data->ifspec);
[01;31m[K^~~~~~~~~~~~~~~~~[m[K
[32m[KG_TYPE_INTERFACE[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:730:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_RESOLVE[m[K' undeclared (first use in this function); did you mean '[01m[KG_PROXY_RESOLVER[m[K'?
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_RESOLVE[m[K, cb_data->concheck.hosts);
[01;31m[K^~~~~~~~~~~~~~~[m[K
[32m[KG_PROXY_RESOLVER[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:730:53:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
curl_easy_setopt (ehandle, CURLOPT_RESOLVE, cb_data[01;31m[K->[m[Kconcheck.hosts);
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:731:29:[m[K [01;31m[Kerror: [m[K'[01m[KCURLOPT_IPRESOLVE[m[K' undeclared (first use in this function)
curl_easy_setopt (ehandle, [01;31m[KCURLOPT_IPRESOLVE[m[K, resolve);
[01;31m[K^~~~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:733:2:[m[K [01;35m[Kwarning: [m[Kimplicit declaration of function '[01m[Kcurl_multi_add_handle[m[K' [[01;35m[K-Wimplicit-function-declaration[m[K]
[01;35m[Kcurl_multi_add_handle[m[K (mhandle, ehandle);
[01;35m[K^~~~~~~~~~~~~~~~~~~~~[m[K
In file included from [01m[K/usr/x86_64-pc-linux-gnu/lib/glib-2.0/include/glibconfig.h:9[m[K,
from [01m[K/usr/x86_64-pc-linux-gnu/include/glib-2.0/glib/gtypes.h:32[m[K,
from [01m[K/usr/x86_64-pc-linux-gnu/include/glib-2.0/glib/galloca.h:32[m[K,
from [01m[K/usr/x86_64-pc-linux-gnu/include/glib-2.0/glib.h:30[m[K,
from [01m[K../NetworkManager-1.16.0/shared/nm-default.h:219[m[K,
from [01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:23[m[K:
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:[m[K In function '[01m[Kresolve_cb[m[K':
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:755:26:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
g_clear_object (&cb_data[01;31m[K->[m[Kconcheck.resolve_cancellable);
[01;31m[K^~[m[K
[01m[K/usr/x86_64-pc-linux-gnu/include/glib-2.0/glib/gmacros.h:292:104:[m[K [01;36m[Knote: [m[Kin definition of macro '[01m[KG_STATIC_ASSERT[m[K'
#define G_STATIC_ASSERT(expr) typedef char G_PASTE (_GStaticAssertCompileTimeAssertion_, __COUNTER__)[([01;36m[Kexpr[m[K) ? 1 : -1] G_GNUC_UNUSED
[01;36m[K^~~~[m[K
[01m[K/usr/x86_64-pc-linux-gnu/include/glib-2.0/gobject/gobject.h:672:36:[m[K [01;36m[Knote: [m[Kin expansion of macro '[01m[Kg_clear_pointer[m[K'
#define g_clear_object(object_ptr) [01;36m[Kg_clear_pointer[m[K ((object_ptr), g_object_unref)
[01;36m[K^~~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:755:2:[m[K [01;36m[Knote: [m[Kin expansion of macro '[01m[Kg_clear_object[m[K'
[01;36m[Kg_clear_object[m[K (&cb_data->concheck.resolve_cancellable);
[01;36m[K^~~~~~~~~~~~~~[m[K
In file included from [01m[K/usr/x86_64-pc-linux-gnu/include/glib-2.0/glib/glist.h:32[m[K,
from [01m[K/usr/x86_64-pc-linux-gnu/include/glib-2.0/glib/ghash.h:33[m[K,
from [01m[K/usr/x86_64-pc-linux-gnu/include/glib-2.0/glib.h:50[m[K,
from [01m[K../NetworkManager-1.16.0/shared/nm-default.h:219[m[K,
from [01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:23[m[K:
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:755:26:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
g_clear_object (&cb_data[01;31m[K->[m[Kconcheck.resolve_cancellable);
[01;31m[K^~[m[K
[01m[K/usr/x86_64-pc-linux-gnu/include/glib-2.0/glib/gmem.h:133:24:[m[K [01;36m[Knote: [m[Kin definition of macro '[01m[Kg_clear_pointer[m[K'
_pp.in = (char *) ([01;36m[Kpp[m[K); \
[01;36m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:755:2:[m[K [01;36m[Knote: [m[Kin expansion of macro '[01m[Kg_clear_object[m[K'
[01;36m[Kg_clear_object[m[K (&cb_data->concheck.resolve_cancellable);
[01;36m[K^~~~~~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:785:40:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
cb_data[01;31m[K->[m[Kconcheck.con_config->host,
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:786:40:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
cb_data[01;31m[K->[m[Kconcheck.con_config->port ?: "80",
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:788:10:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
cb_data[01;31m[K->[m[Kconcheck.hosts = curl_slist_append (cb_data->concheck.hosts, host_entry);
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:788:55:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
cb_data->concheck.hosts = curl_slist_append (cb_data[01;31m[K->[m[Kconcheck.hosts, host_entry);
[01;31m[K^~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:[m[K In function '[01m[Knm_connectivity_check_start[m[K':
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:822:9:[m[K [01;31m[Kerror: [m[K'[01m[KNMConnectivityCheckHandle[m[K' {aka '[01m[Kstruct _NMConnectivityCheckHandle[m[K'} has no member named '[01m[Kconcheck[m[K'
cb_data[01;31m[K->[m[Kconcheck.con_config = _con_config_ref (priv->con_config);
[01;31m[K^~[m[K
At top level:
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:737:1:[m[K [01;35m[Kwarning: [m[K'[01m[Kresolve_cb[m[K' defined but not used [[01;35m[K-Wunused-function[m[K]
[01;35m[Kresolve_cb[m[K (GObject *object, GAsyncResult *res, gpointer user_data)
[01;35m[K^~~~~~~~~~[m[K
[01m[K../NetworkManager-1.16.0/src/nm-connectivity.c:199:1:[m[K [01;35m[Kwarning: [m[K'[01m[K_con_config_get_response[m[K' defined but not used [[01;35m[K-Wunused-function[m[K]
[01;35m[K_con_config_get_response[m[K (const ConConfig *con_config)
[01;35m[K^~~~~~~~~~~~~~~~~~~~~~~~[m[K
[494/632] x86_64-pc-linux-gnu-cc -Isrc/25a6634@@NetworkManager@sta -Isrc -I../NetworkManager-1.16.0/src -Ilibnm-core -I../NetworkManager-1.16.0/libnm-core -I. -I../NetworkManager-1.16.0/ -Ishared -I../NetworkManager-1.16.0/shared -I../NetworkManager-1.16.0/shared/systemd/sd-adapt-shared -I../NetworkManager-1.16.0/shared/systemd/src/basic -I/usr/x86_64-pc-linux-gnu/include/gio-unix-2.0 -I/usr/x86_64-pc-linux-gnu/include/libmount -I/usr/x86_64-pc-linux-gnu/include/blkid -I/usr/x86_64-pc-linux-gnu/include/uuid -I/usr/x86_64-pc-linux-gnu/lib/libffi-3.2.1/include -I/usr/x86_64-pc-linux-gnu/include/glib-2.0 -I/usr/x86_64-pc-linux-gnu/lib/glib-2.0/include -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -std=gnu11 -O2 -g -fdata-sections -ffunction-sections -Wdeclaration-after-statement -Wfloat-equal -Wimplicit-fallthrough -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wmissing-prototypes -Wno-duplicate-decl-specifier -Wno-format-truncation -Wno-missing-field-initializers -Wno-pragmas -Wno-sign-compare -Wno-unused-parameter -Wpointer-arith -Wshadow -Wstrict-prototypes -Wundef -fno-strict-aliasing -march=native -O2 -march=native -O2 -fPIC -pthread -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_40 -DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_40 -DNETWORKMANAGER_COMPILATION=NM_NETWORKMANAGER_COMPILATION_DAEMON -MD -MQ 'src/25a6634@@NetworkManager@sta/nm-config-data.c.o' -MF 'src/25a6634@@NetworkManager@sta/nm-config-data.c.o.d' -o 'src/25a6634@@NetworkManager@sta/nm-config-data.c.o' -c ../NetworkManager-1.16.0/src/nm-config-data.c
[495/632] x86_64-pc-linux-gnu-cc -Isrc/25a6634@@NetworkManager@sta -Isrc -I../NetworkManager-1.16.0/src -Ilibnm-core -I../NetworkManager-1.16.0/libnm-core -I. -I../NetworkManager-1.16.0/ -Ishared -I../NetworkManager-1.16.0/shared -I../NetworkManager-1.16.0/shared/systemd/sd-adapt-shared -I../NetworkManager-1.16.0/shared/systemd/src/basic -I/usr/x86_64-pc-linux-gnu/include/gio-unix-2.0 -I/usr/x86_64-pc-linux-gnu/include/libmount -I/usr/x86_64-pc-linux-gnu/include/blkid -I/usr/x86_64-pc-linux-gnu/include/uuid -I/usr/x86_64-pc-linux-gnu/lib/libffi-3.2.1/include -I/usr/x86_64-pc-linux-gnu/include/glib-2.0 -I/usr/x86_64-pc-linux-gnu/lib/glib-2.0/include -fdiagnostics-color=always -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -std=gnu11 -O2 -g -fdata-sections -ffunction-sections -Wdeclaration-after-statement -Wfloat-equal -Wimplicit-fallthrough -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wmissing-prototypes -Wno-duplicate-decl-specifier -Wno-format-truncation -Wno-missing-field-initializers -Wno-pragmas -Wno-sign-compare -Wno-unused-parameter -Wpointer-arith -Wshadow -Wstrict-prototypes -Wundef -fno-strict-aliasing -march=native -O2 -march=native -O2 -fPIC -pthread -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_40 -DGLIB_VERSION_MAX_ALLOWED=GLIB_VERSION_2_40 -DNETWORKMANAGER_COMPILATION=NM_NETWORKMANAGER_COMPILATION_DAEMON -MD -MQ 'src/25a6634@@NetworkManager@sta/nm-config.c.o' -MF 'src/25a6634@@NetworkManager@sta/nm-config.c.o.d' -o 'src/25a6634@@NetworkManager@sta/nm-config.c.o' -c ../NetworkManager-1.16.0/src/nm-config.c
ninja: build stopped: subcommand failed.