connectivity: fix build with --disable-concheck

Fixes: 2cec94bacce4 ('connectivity: use systemd-resolved for resolving the check endpoint')

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/issues/155